{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 60,
  "lineage": "024cbed9-aca8-33db-6110-363576c483eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:internet-gateway/igw-04188681b4f754706",
            "id": "igw-04188681b4f754706",
            "owner_id": "705920657793",
            "tags": {
              "Name": "IGW 01"
            },
            "tags_all": {
              "Name": "IGW 01"
            },
            "vpc_id": "vpc-059e2d8068c3d22e7"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-02c8c820bc8dbd0e8",
            "network_interface_id": "eni-0ad36069c590bb7a2",
            "private_ip": "10.0.2.75",
            "subnet_id": "subnet-0b23b4b7d39aa86e8",
            "tags": {
              "Name": "Nat GW 01"
            },
            "tags_all": {
              "Name": "Nat GW 01"
            }
          },
          "dependencies": [
            "aws_subnet.private-subnet01",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:route-table/rtb-0ccbe966f9722c51f",
            "id": "rtb-0ccbe966f9722c51f",
            "owner_id": "705920657793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04188681b4f754706",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-059e2d8068c3d22e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw01",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8825187b05df901",
            "route_table_id": "rtb-0ccbe966f9722c51f",
            "subnet_id": "subnet-0ee6418ece719be1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw01",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet01",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:security-group/sg-0337177c2110f1643",
            "description": "Allow TLS + HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337177c2110f1643",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my security group vpc01",
            "name_prefix": "",
            "owner_id": "705920657793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_https"
            },
            "tags_all": {
              "Name": "allow_tls_https"
            },
            "timeouts": null,
            "vpc_id": "vpc-059e2d8068c3d22e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:subnet/subnet-0b23b4b7d39aa86e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23b4b7d39aa86e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705920657793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 01"
            },
            "tags_all": {
              "Name": "private subnet 01"
            },
            "vpc_id": "vpc-059e2d8068c3d22e7"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:subnet/subnet-0ee6418ece719be1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee6418ece719be1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705920657793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet 01"
            },
            "tags_all": {
              "Name": "public subnet 01"
            },
            "vpc_id": "vpc-059e2d8068c3d22e7"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:705920657793:vpc/vpc-059e2d8068c3d22e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a971669b7cc62ad2",
            "default_route_table_id": "rtb-0a2aed9491be1beb7",
            "default_security_group_id": "sg-0671c7e4cabea0000",
            "dhcp_options_id": "dopt-0d6e0de5569c52c3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-059e2d8068c3d22e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2aed9491be1beb7",
            "owner_id": "705920657793",
            "tags": {
              "Name": "vpc01"
            },
            "tags_all": {
              "Name": "vpc01"
            }
          }
        }
      ]
    }
  ]
}